--- a/exercises/3.1/package.json
+++ b/exercises/3.1/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "services",
-  "version": "0.0.0",
+  "name": "jwt-ts-api-boilerplate",
+  "version": "1.0.0",
   "author": "e-Baron",
   "private": true,
   "scripts": {
@@ -11,15 +11,17 @@
     "start": "node build/bin/www"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.56.0",
