--- a/exercises/Examen blanc 25/MWANANTEBA_YOHANI/frontend/package.json
+++ b/exercises/Examen blanc 25/MWANANTEBA_YOHANI/frontend/package.json
@@ -11,19 +11,27 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "bcrypt": "^6.0.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
+    "npm": "^11.5.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-checker": "^0.10.2"
   }
 }
